replace h2 with embedded postgres in tests